--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,41 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model Cinemanage.Models.ViewModels.LandingPageVM;
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@{
+    ViewData["Title"] = "Cinemanage";
+}
+<style>
+    .clamp-overview {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow:hidden;
+    }
+
+    .clamp-title{
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+
+</style>
+
+<div class="row">
+    @foreach (var movie in Model.Upcoming.results)
+    {
+        <div class="col-4 p-2">
+            <div class="card h-100">
+                <img src="@movie.poster_path" class="card-img-top" alt="...">
+                <div class="card-body d-flex flex-column p-2">
+                    <h5 class="card-title clamp-title">@movie.title</h5>
+                    <p class="card-text clamp-overview">@movie.overview</p>
+                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id" class="btn btn-lg btn-warning mt-auto">Details</a>
+                </div>
+            </div>
+        </div>
+    }
 </div>
+
+
+
