--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,66 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+body, row {
+    margin-bottom: 60px;
+}
+
+.clamp-overview {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.card-body {
+    object-fit: cover;
+    overflow: hidden;
+}
+
+    .card-body h5 {
+        height: 2rem;
+    }
+
+.carousel-control-prev {
+    width: 13%;
+}
+.carousel-control-next {
+    width: 13%;
+}
+/* // Show content for bigger viewpoints */
+@media screen and (min-width:900px), screen and (min-height:500px) {
+    .triple-carousel {
+        display: block;
+    }
+
+    .single-carousel {
+        display: none;
+    }
+}
+
+/* // Show notice for smaller viewpoints */
+@media screen and (max-width:900px), screen and (max-height:500px) {
+    .triple-carousel {
+        display: none;
+    }
+
+    .single-carousel {
+        display: block;
+    }
 }
