--- a/Views/Actors/Details.cshtml
+++ b/Views/Actors/Details.cshtml
@@ -1,6 +1,33 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using Cinemanage.Models.TMDB
 
+@model ActorDetail
+
+<div class="d-flex">
+    <div class="flex-shrink-0">
+        <img src="@Model.profile_path" alt="actor-image">
+    </div>
+    <div class="flex-grow-1 ms-3">
+        <div class="row">
+            <table class="table table-hover">
+                <tbody>
+                    <tr>
+                        <td>Name: </td>
+                        <td>@Model.name</td>
+                    </tr>
+                    <tr>
+                        <td>Biography: </td>
+                        <td>@Model.biography</td>
+                    </tr>
+                    <tr>
+                        <td>Birthday: </td>
+                        <td>@Model.birthday</td>
+                    </tr>
+                    <tr>
+                        <td>Place of birth: </td>
+                        <td>@Model.place_of_birth</td>
+                    </tr>                 
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
