--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,52 +5,47 @@
 }
 
 <section class="px-1">
-   @*  ----------- UPCOMING --------------- *@
+    @*  ----------- UPCOMING --------------- *@
     <div class="row">
         <span>UPCOMING</span>
     </div>
     @* Display 3 movies for Large ViEwPorts *@
-    <div class="row triple-carousel">
-        <div id="upcomingCarousel" class="carousel slide" data-bs-ride="carousel" data-touch="true">
-            <div class="carousel-inner px-2">
-                @{
-                    var classText = "active";
-                    for (var slide = 0; slide <= 4; slide++)
-                    {
-                        <div class="carousel-item @classText">
-                            <div class="row">
-                                @foreach (var movie in Model.Upcoming.results.Skip(slide * 3).Take(3))
-                                {
-                                    <div class="col-4 p-2">
-                                        <div class="card h-100 border-2">
-                                            <img src="@movie.poster_path" class="d-block w-100" alt="...">
-                                            <div class="card-body d-flex flex-column p-2">
-                                                <h5 class="card-title text-truncate">@movie.title</h5>
-                                                <p class="card-text clamp-overview">@movie.overview</p>
-                                                <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id" class="btn btn-lg btn-warning mt-auto">Details</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                }
+
+    <div id="upcomingCarousel" class="carousel" data-touch="true">
+        <div class="carousel-inner">
+            @{
+                var classText = "active";                   
+                        @foreach (var movie in Model.Upcoming.results.Take(15))
+                        {
+                        <div class="carousel-item">
+                            <div class="card border-0">                              
+                                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id">
+                                        <img src="@movie.poster_path" class="img-fluid" alt="...">
+                                    </a>
+                                <div class="card-body p-2">
+                                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id">
+                                        <h5 class="card-title text-truncate">@movie.title</h5>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        classText = "";
-                    }
-
+                        }                    
+                    classText = "";
                 }
-
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#upcomingCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#upcomingCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-    </div>  
+        <button class="carousel-control-prev" type="button" data-bs-target="#upcomingCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#upcomingCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+
+
+
     @* Display 1 movie for Small Viewports *@
     <div class="row single-carousel">
         <div id="upcomingCarousel1" class="carousel slide" data-bs-ride="carousel" data-touch="true">
@@ -59,7 +54,7 @@
                     classText = "active";
                     for (var slide = 0; slide <= 14; slide++)
                     {
-                        <div class="carousel-item @classText" >
+                        <div class="carousel-item @classText">
                             <div class="row">
                                 @foreach (var movie in Model.Upcoming.results.Skip(slide * 1).Take(1))
                                 {
