--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,6 +18,7 @@ html {
 }
 
 body {
+    margin: 0;
     margin-top: 100px;
     background-color: #D6D6D6;
 }
@@ -27,7 +28,7 @@ footer {
 }
 
 nav {
-    background-color:white;
+    background-color: white;
 }
 
 /*body, row {
@@ -35,23 +36,23 @@ nav {
 }*/
 
 /*@media screen and (min-width:576px) {*/
-    .carousel-inner {
-        padding: 1em;
-        display: flex;
-        -webkit-mask: linear-gradient(90deg,#0000,#000 5% 95%,#0000);
-    }
+.carousel-inner {
+    padding: 1em;
+    display: flex;
+    -webkit-mask: linear-gradient(90deg,#0000,#000 5% 95%,#0000);
+}
 
-    .carousel-item {
-        display: flex;
-        margin: 0;
-        flex: 0 0 content;
-    }
+.carousel-item {
+    display: flex;
+    margin: 0;
+    flex: 0 0 content;
+}
 
-    .carousel .card {
-        margin: 0 .5em;
-        width: 180px;
-        background-color: transparent;
-    }
+.carousel .card {
+    margin: 0 .5em;
+    width: 180px;
+    background-color: transparent;
+}
 
 /*}*/
 
@@ -67,17 +68,15 @@ nav {
     height: 20vh;
     background-color: black;
     border-radius: 10px;
-    top:13%;
+    top: 13%;
     /*transform: translateY(-50%);*/
-    opacity:.5;
-
+    opacity: .5;
 }
 
 
-.carousel-control-prev:hover, .carousel-control-next:hover {
-  
-    opacity: .8;
-}
+    .carousel-control-prev:hover, .carousel-control-next:hover {
+        opacity: .8;
+    }
 /*.card {
     margin:auto;
     padding:0;
@@ -96,10 +95,11 @@ nav {
     .card-body a:hover {
         color: #FC3635;
     }
-    .carousel .card img {
-        border-radius: 10px;
-        box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, .50);
-    }
+
+.carousel .card img {
+    border-radius: 10px;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, .50);
+}
 
 /*.clamp-overview {
     display: -webkit-box;
@@ -120,6 +120,40 @@ nav {
     /* 50% of your logo width */
     display: block;
 }
+
+.header-wrapper {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+    .header-wrapper img {
+        max-height: 30vh;
+        object-fit: cover;
+    }
+
+/* Centered text */
+.centered {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    padding: 60px;
+}
+    .centered .form-control {
+        border-radius: 25px;
+    }
+
+    .centered .btn {
+        position: absolute;
+        top: 50%;
+        left: 89.4%;
+        transform: translate(-50%, -50%);
+        width: auto;
+    }
+
+    
 
 /*#upcoming{
     background-color:black;
